--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -1,42 +1,54 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+*{
   margin: 0;
+  padding: 0;
+}
+body {
+  font-family: 'JetBrains Mono', monospace;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#main-div{
+  width:100%;
+  height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.dark-theme{
+  background: #000;
+  color: #FFF;
+}
+
+.light-theme{
+  background: #FFF;
+  color: #000;
+}
+
+
+.primary-heading-h1{
+  font-weight: 500;
+}
+
+.heading-dark{
+  color: var(--greenAcent) !important;
+}
+
+.heading-light{
+  color: var(--orange) !important;
+}
+
+.visually-hidden{
+  display: none;
+}
+
+/* colors */
+:root{
+  --goldenYellow:#EAB208;
+  --goldenbYellowLight:#FACC15;
+  --white:#fff;
+  --black:#000;
+  --greenAcent:#00FF99;
+  --orange:#f97316;
+  --blueAcent:#0077B5;
+  --lightBlack:#232329;
+  --whiteDirty:#ece7e7;
+  --whiteDirty-1:#c8bdbd;
+  --grey:#eeeeee78;
 }
