--- a/portfolio/src/Components/Buttons/Button/index.css
+++ b/portfolio/src/Components/Buttons/Button/index.css
@@ -15,6 +15,7 @@
    gap: 12px;
    align-items: center;
    justify-content: center;
+   cursor: pointer;
 }
 .button-main:hover{
     background: var(--goldenbYellowLight);
